# rendertbb-2025-a-m84-05

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
aos/: CMakeLists.txt
aos/include/: application.hpp
aos/src/: application.cpp  main.cpp
common/: CMakeLists.txt
common/include/: camera.hpp  color.hpp  config.hpp  material.hpp  object.hpp  ray.hpp  scene.hpp  scene_parser.hpp  vector.hpp
common/src/: camera.cpp  color.cpp  config.cpp  material.cpp  object.cpp  scene.cpp  scene_parser.cpp
par/: CMakeLists.txt
par/include/: application.hpp  image_soa_par.hpp
par/src/: application.cpp  main.cpp
scripts/: build.sh  compare_ppm.py  ftest.sh  rendimiento_aos_caso4.sh  rendimiento_aos_casos123.sh  rendimiento_soa_caso4.sh  rendimiento_soa_casos123.sh  utest.sh
soa/: CMakeLists.txt
soa/include/: application.hpp  image_soa.hpp
soa/src/: application.cpp  main.cpp
tests/: invalid_config_fov.txt  invalid_config_gamma.txt  invalid_config_width.txt  invalid_scene_material.txt  invalid_scene_radius.txt  invalid_scene_syntax.txt  s2.ppm
utaos/: CMakeLists.txt  test_render_aos.cpp
utcommon/: CMakeLists.txt  test_camera.cpp  test_color.cpp  test_config.cpp  test_material.cpp  test_object.cpp  test_ray.cpp  test_scene.cpp  test_scene_parser.cpp  test_vector.cpp
utsoa/: CMakeLists.txt  test_render_soa.cpp
